# hexane

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  full.bazelproject  package.json  params.mk  pom.xml  version.bzl
src/main/adoc/: BUILD  BUILD.bazel
src/main/adoc/en/: 01-intro.adoc  index.adoc
src/main/java/io/machinecode/hexane/: BUILD  BUILD.bazel  BaseDataSource.java  BasePool.java  BooleanRef.java  CheckedCallableStatement.java  CheckedConnection.java  CheckedDatabaseMetaData.java  CheckedPreparedStatement.java  CheckedResultSet.java  CheckedResultSetMetaData.java  CheckedStatement.java  Clock.java  Config.java  Defaults.java  DelegateInternalListener.java  ExceptionHandler.java  Flags.java  Hexane.java  HexaneConnection.java  HexaneConnectionEventListener.java  HexaneConnectionPoolDataSource.java  HexaneDataSource.java  HexaneListener.java  HexaneManagedConnection.java  HexaneManagedDataSource.java  HexanePool.java  HexanePooledConnection.java  HexanePooledPool.java  HexaneStatementEventListener.java  HexaneXAConnection.java  HexaneXADataSource.java  HexaneXAPool.java  HoldabilityType.java  InternalListener.java  LRUStatementCache.java  Logger.java  LoggerFactory.java  LoggerType.java  Msg.java  (+11 more)
src/main/java/io/machinecode/hexane/ext/spring/: BUILD.bazel  HexaneConnectionPoolDataSourceAutoConfiguration.java  HexaneDataSourceAutoConfiguration.java  HexaneDataSourcePoolMetaData.java  HexaneManagedDataSourceAutoConfiguration.java  HexaneProperties.java  HexaneXADataSourceAutoConfiguration.java  SpringUtil.java  deps.bzl
src/main/site/: BUILD.bazel  hexane.dxf  index.html  logo.dxf  site.scss
src/main/site/img/: BUILD.bazel
src/test/java/io/machinecode/hexane/: BUILD.bazel  BasePoolAddAfterTest.java  BasePoolAddBeforeTest.java  BasePoolTest.java  CheckedCallableStatementTest.java  CheckedConnectionTest.java  CheckedDatabaseMetaDataTest.java  CheckedPreparedStatementTest.java  CheckedResultSetMetaDataTest.java  CheckedResultSetTest.java  CheckedStatementTest.java  CheckedTestBase.java  ClockTest.java  ClosedConnectionTest.java  ClosedPooledConnectionTest.java  ClosedXAConnectionTest.java  CommonDataSourceTestBase.java  ConfigTest.java  DbType.java  DefaultsTest.java  FixedClock.java  HexaneConnectionPoolDataSourceTest.java  HexaneConnectionTest.java  HexaneDataSourceTest.java  HexaneListenerTest.java  HexaneManagedConnectionTest.java  HexaneManagedDataSourceTest.java  HexanePoolTest.java  HexanePooledConnectionTest.java  HexanePooledPoolTest.java  HexaneXAConnectionTest.java  HexaneXADataSourceTest.java  HexaneXAPoolTest.java  PerDb.java  PooledConnectionTestBase.java  Ref.java  StatementCacheTest.java  StatementKeyTest.java  TestBase.java  TestUtil.java  (+6 more)
src/test/java/io/machinecode/hexane/bench/: BUILD  BUILD.bazel  BenchBase.java  SelectOneBench.java  SelectOneThroughputBench.java  TestXAConnection.java  TestXADataSource.java
src/test/java/io/machinecode/hexane/ext/spring/: BUILD.bazel  HexaneConnectionPoolDataSourceAutoConfigurationTest.java  HexaneDataSourceAutoConfigurationTest.java  HexaneManagedDataSourceAutoConfigurationTest.java  HexaneXADataSourceAutoConfigurationTest.java  SpringTestBase.java
tools/: BUILD  BUILD.bazel  coverage.bzl  util.bzl
tools/gerrit/: BUILD  java_doc.bzl  maven_jar.bzl
tools/idea/: all.bazelproject
tools/include/: database_repositories.bzl  pool_repositories.bzl  spring_repositories.bzl
tools/java/: BUILD.bazel  maven_jar.bzl
