load("@io_machinecode_tools//tools:coverage.bzl", "coverage_html")
load("@io_machinecode_tools//tools:util.bzl", "to_tar")
load("@io_machinecode_tools//tools/java:javadoc.bzl", "java_doc")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "coverage_data",
    srcs = glob([
        "bazel-out/**/coverage.dat",
    ]),
)

coverage_html(
    name = "coverage",
    srcs = [
        "//src/main/java/io/machinecode/hexane:srcs",
        "//src/main/java/io/machinecode/hexane/ext/spring:srcs",
    ],
    data = [
        "//:coverage_data",
    ],
    tags = ["manual"],
)

java_doc(
    name = "javadoc",
    libs = [
        "//src/main/java/io/machinecode/hexane",
        "//src/main/java/io/machinecode/hexane/ext/spring",
    ],
    pkgs = [
        "io.machinecode.hexane",
    ],
    title = "Hexane",
)

to_tar(
    name = "javadoc-tar",
    srcs = [":javadoc"],
    dir = "javadoc",
)

to_tar(
    name = "rules-tar",
    srcs = ["//tools:docs"],
    dir = "rules",
)

pkg_tar(
    name = "site",
    srcs = [
        "//src/main/site:img",
    ],
    extension = "tar.gz",
    files = {
        "//src/main/site:css": "css/app.css",
        "//src/main/site:html": "index.html",
        "//src/main/site:icon": "favicon.ico",
    },
    mode = "0644",
    deps = [
        ":javadoc-tar",
        ":rules-tar",
        "//src/main/adoc:html",
        "//src/main/adoc:pdf",
    ],
)
