load("//:deps.bzl", "build_deps")
load("//tools/java:java_filegroup.bzl", "java_filegroup")

package(default_visibility = ["//visibility:public"])

java_filegroup(
    name = "srcs",
    srcs = glob(["*.java"]),
)

java_library(
    name = "hexane",
    srcs = [":srcs"],
    tags = [
        "maven_coordinates=io.machinecode.hexane:hexane-core:{pom_version}",
    ],
    deps = build_deps,
)
