load("//src/test/java/io/machinecode/hexane:deps.bzl", "database_properties", "hexane_bench_deps", "hexane_test_deps")
load("//tools/java:java_filegroup.bzl", "java_filegroup")

package(default_visibility = ["//visibility:public"])

java_filegroup(
    name = "check-srcs",
    srcs = glob(["*.java"]),
)

filegroup(
    name = "srcs",
    srcs = glob(
        include = ["*.java"],
        exclude = ["*Bench.java"],
    ),
)

bench_deps = [
    "//src/main/java/io/machinecode/hexane",
    "//src/test/java/io/machinecode/hexane",
    "@com_zaxxer_hikaricp//jar",
    "@com_mchange_mchange_commons_java//jar",
    "@com_mchange_c3p0//jar",
    "@commons_logging_commons_logging//jar",
    "@io_agroal_agroal_api//jar",
    "@io_agroal_agroal_pool//jar",
    "@io_machinecode_tools//tools/java:jmh",
    "@org_apache_commons_commons_pool2//jar",
    "@org_apache_commons_commons_dbcp2//jar",
    "@org_apache_tomcat_tomcat_jdbc//jar",
    "@org_apache_tomcat_tomcat_juli//jar",
]

java_library(
    name = "bench",
    srcs = [":srcs"],
    deps = hexane_bench_deps + bench_deps,
)

[
    java_binary(
        name = test[:-5],
        srcs = [test],
        jvm_flags = ["'%s'" % it for it in database_properties],
        main_class = "org.openjdk.jmh.Main",
        deps = hexane_bench_deps + bench_deps + [
            ":bench",
        ],
    )
    for test in glob(["*Bench.java"])
]
