load("//:deps.bzl", "build_deps")
load(":deps.bzl", "spring_deps")
load("//tools/java:java_filegroup.bzl", "java_filegroup")

package(default_visibility = ["//visibility:public"])

java_filegroup(
    name = "srcs",
    srcs = glob(["*.java"]),
)

java_library(
    name = "spring",
    srcs = [":srcs"],
    deps = build_deps + spring_deps + [
        "//src/main/java/io/machinecode/hexane",
    ],
)
